design 1 - play paradox

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -521,16 +521,16 @@ As learners traced a trail between the different island/missions they had visite
 
 #### Learning Dimensions Map
 
-When researching hands-on tinkering in Science museums Bevan and Petrich [-@petrich_it_2013] worked with educators to examine video footage of families interacting with exhibits to make a structured list of the learning they observed. The resulting map of learning dimensions included underlying science concepts but also contained more general skills and helping behaviours involved in exploratory learning processes.
+Research on _concept maps_ [@canas2003summary] as methods for teachers and researchers to identify key learning suited to particular computing projects has gain traction in the field of computing education [@keppens_concept_2008; @noauthor_quick_2020; @weinerth_concept_2014]. The value of facilitators presenting concepts  and asking students to create maps of concepts for formative assessment. In addition, there is value in mapping which are likely to occur in project work especially when such concepts are embedded in activity in a way which resists superficial analysis. Research on hands-on tinkering in science museums by Bevan and Petrich [-@petrich_it_2013] together with educators examined video footage of families interacting with exhibits to make a structured list of the learning they observed. The resulting map of learning dimensions included underlying science concepts but also contained more general skills and helping behaviours involved in exploratory learning processes.
 
 <!-- In learning environments where there is a lot of choice assessing learners via observation is beneficial. Rather than deciding what you want to teach and testing students on that area, you can map the learning happening in an authentic activity. -->
 
-Research on _concept maps_ [@canas2003summary] as methods for teachers and researchers to identify key learning suited to particular computing projects. Has traction for NCCE quick read. The value of facilitators mapping out concept which are likely to occur in project work can help with x, y and z.
 
 
 <!-- Another chapter in this collection identified concept maps and observation as methods for teachers and researchers to identify key learning suited to particular computing projects.  -->
 
-One of the outcomes of my research was to extract some of the concepts and practices that learners engaged with when making games from hours of recorded material. While some concepts are common to existing computational thinking frameworks others, including systems thinking concepts, are more unique to game making. Table 4.x. shows my resulting map of learning dimensions for the 3M game making model.
+One of the outcomes of my research was to extract some of the concepts and practices that learners engaged with when making games from hours of recorded material. While some concepts are common to existing computational thinking frameworks others, including systems thinking concepts, are more unique to game making. Table 4.x. shows my resulting map of learning dimensions.
+WHY THESE CONCEPTS?
 
 |      Coding Concepts    | Systems Patterns    | Design Practices|
 |--------------|-----------|------------|
@@ -544,51 +544,58 @@ One of the outcomes of my research was to extract some of the concepts and pract
 | Input Event |   | Reusing and Remixing      |
 
 
-This table is supplemented with concise descriptions of the concepts [^5], and cross referenced with examples of the concepts in practice in common game features[^6]. 
+To illustrate these concepts in more depth, I created concise descriptions of the concepts [^5], and cross referenced with examples of the concepts in practice in the application common game features[^6]. This process aimed to be an aid to my existing attempts to highlight relevant concepts in-situ.
 
-This process of mapping this framework is potentially of use for teachers and other researchers to help their observation of students in game making activities to align with design, coding and computational concepts.
-
-An example: In journal notes I note my attempts to find learning relating to abstract concepts happening in-situ. A common example of use of loops or arrays or functions. I would highlight their use by participants and link to their activity. This mirrors the concept of the value of abstract in context for wider application is underlined in the work Davydov of rising to the concrete [@valsiner_cultural-historical_2007].
+In journal notes I note my attempts to find learning relating to abstract concepts happening in-situ. A common example of use of loops or arrays or functions. I would highlight their use by participants and link to their activity. This mirrors the concept of the value of abstract in context for wider application is underlined in the work Davydov of rising to the concrete [@valsiner_cultural-historical_2007].
 
 #### The potential of learning and navigational maps
 
-NOTE - more work to link this succinctly to literature is needed.
+This process of mapping this framework is potentially of use for teachers and other researchers to help their observation of students in game making activities to align with design, coding and computational concepts. Offering student choice in project work can create stressful demands on a teacher trying to support a diverse design paths [@blumenfeld_motivating_1991; @cole_fifth_2006]. To address this issue practically, rather than students working on varied game types and features, I restricted the genre of game and offered a significant but limited menu of features, a process explored in the next section. The mapping of specific design features to the related concepts, as outlined above, has potential to aid teachers and students to track and correlate the underlying curricular concepts being explored in these divergent learning pathways.
 
-My experience of the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The following section aims to summarise the alignment of the potential of this work with existing research
+The process of adapting this learning design to the needs of more formal settings can be aligned to existing research on this area. For example the concept of semantic waves is relevant here as a way of visioning the alternation between concrete design experience and communicating the underlying abstract concepts [@curzon_using_2020; @maton_making_2013].   
+
+However, despite this alignment and potential utility in a formal setting, I was reluctant to introduce these resources in this setting. Instead prioritising time spent in on-going hands on experimentation, peer learning and playful activities. In retrospect, my inaction seems appropriate to the informal context of this environment, reflecting the lack of external motivation for participants and myself to align to curricular concepts, and a valid reluctance to introduce additional distracting stimulus. While, this perspective aligns with socio-cultural understandings of learning which problematise the separation of the content to be learned from the embodied activity itself [find source/s], this alignment did not halt my concern over remaining locked into concrete experience and not noticing repeated abstract concepts which could be of future use. Hoyles and Noss term this tension a
+'play paradox' [@hoyles_pedagogy_1992, p.46].
+
+My ongoing discomfort surrounding the validity of the learning experience without direct alignment to abstract content, stem from wider concerns around avoiding danger of tacit learning by reinforcing learning and spur metacognition. In retrospect, analysis of the wider learning experience of shows that opportunities for such alignment did exist beyond those imposed in external documentation via social processes. This theme is explored in more detail in chapter six.
+
+
+<!-- Thus, while this aspect and merits further exploration to potential help classroom practice, this is be beyond the scope of this thesis. -->
+
+<!-- This reflection was helpful for me as a researcher in that it helped decided to keep the focus on this study on more informal and organically evolving processes.  -->
+
+<!--
+My progress in this study would have been more direct if I had not attempted to resolve the conflict between the informal choice and curriculum alignment. -->
+
+<!-- Despite this, the niggling feeling, it looks like fun but are they learning, remained.  -->
+
+
+
+<!-- IS THIS NEEDED / IN THE RIGHT PLACE?
+The process of researching conceptions of agency has allowed me to align my intuitive reluctance to steer participants towards the more abstract curricular concepts to interpretations of agency. In particular, Matusov's discussion on the negative impact on authorial agency of processes designed to align with curricular goals resonates. -->
+
+
+
+
+
+
+<!-- My experience of the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The following section aims to summarise the alignment of the potential of this work with existing research -->
 
 <!-- NOTE - Reduce this down to text - as too close to the end table. And reduce in significance. -->
 
 <!-- - It may not be clear how teachers can best support the direction of learners - addressed by the map linked to the collection of GDP used to support and identify possible pathways. -->
 
-Offering student choice creates stressful demands on a teacher trying to support a  diverse design paths (FIND SIMILAR STUDY). Rather than students working on varied game types and features, I found it practical to limit the type of game to one kind and offer a significant but limited menu of features that users can add and supporting documentation, a process explored in the next section. The mapping of specific features to the related concepts as outlined above can help teachers and students to overcome challenges of track and correlate the underlying curricular concepts being explored in these divergent  learning pathways.
 
 
-Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities. To address this I identified and highlighted systems related design patterns themed as challenge-related patterns to explore systems concepts within the game context. This approach mirrors work undertaken by Gary on Game Star Mechanic , where
+
+<!-- Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities. To address this I identified and highlighted systems related design patterns themed as challenge-related patterns to explore systems concepts within the game context. This approach mirrors work undertaken by Gary on Game Star Mechanic , where -->
 
 <!-- (outlined in Methods chapter -  use Schnell & GSM literature = their terminology is Game elements) -->
 
-#### Inactivity illuminating the play paradox
-
-In work exploring my emergent findings, I explored the concept of semantic waves as a way of picturing the alternating between concrete design experience and implementing specific code structures, and communicating / exploring the underlying abstract concepts.  
-
-However, while the process of adapting this learning design to the needs of more formal settings can be aligned to existing research on this area. (on semantic maps, on abstract concepts), I was reluctant to introduce these resources in this setting. Instead prioritising time spent in on-going hands on experimentation, peer learning and playful activities.
-
-In retrospect, my inaction seems appropriate to the informal context of this environment. It reflects the lack of external motivation for participants and myself to align to curricular concepts. Thus, while this aspect and merits further exploration to potential help classroom practice, this is be beyond the scope of this thesis.
-
-
-My progress in this study would have been more direct if I had not attempted to resolve the conflict between the informal choice and curriculum alignment.
 
 <!-- has been is helpful to provide a clearer the focus of this study on the possibilities of informal spaces. - >
 <!-- I also de-prioritised learning maps as an area of study in this thesis partly this is due to it well explored in other research []FIND SOURCES, -->
 <!-- and partly as the implementation was patchy as I concentrated on more narrative and in person reflection (see later chapter on Methods) -->
-
-This reflection was helpful for me as a researcher in that it helped decided to keep the focus on this study on more informal and organically evolving processes. This emerging perspective also developed as I read underlying ontological approaches to the socio cultural understandings of learning which problematise the separate of the content to be learned. The 'play paradox' explored above, which can create tensions around project work was lessened by the home education context.
-
-Despite this, the niggling feeling, it looks like fun but are they learning, remained. This feeling fed my concerns surrounding the validity of the experience and driving alignment to abstract content, stemmed from wider concerns around avoiding danger of tacit learning by reinforcing learning and spur metacognition. In retrospect, analysis of the wider learning experience shows that such opportunities did exist via social processes. This theme is explored in more detail in chapter six.
-
-IS THIS NEEDED / IN THE RIGHT PLACE?
-The process of researching conceptions of agency has allowed me to align my intuitive reluctance to steer participants towards the more abstract curricular concepts to interpretations of agency. In particular, Matusov's discussion on the negative impact on authorial agency of processes designed to align with curricular goals resonates.
-
 
 
 
