--- a/_posts/thesis_chapters/archive/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/archive/2023-6-4-Design.md
@@ -5,7 +5,7 @@ zotero:
   author-in-text: false # when true, enabled fake author-name-only cites by replacing it with the text of the last names of the authors
   csl-style: harvard-manchester-metropolitan-university # pre-fill the style
 layout: post
-categories: chapter
+categories: archive
 title: 4. Emerging Learning Designs
 ---
 -   [Research Questions - June 2023](#research-questions---june-2023)
